# camera_imu_calibration

./: README.md  april_6x6_50x50cm.yaml
IMU/: d435i_imu.yaml  d435i_imu_param.yaml  mpu6050.yaml
camera/stereo1/: camchain-homewangruidata标定stereo.yaml  results-cam-homewangruidata标定stereo.txt
camera/stereo3/: camchain-homewangruidata标定camerastereo3.yaml  results-cam-homewangruidata标定camerastereo3.txt
camera/stereo4/: camchain-homewangruidata标定camerastereo4.yaml  results-cam-homewangruidata标定camerastereo4.txt
camera_imu/stereo4_imu/: camchain-imucam-homewangruidata标定camera_imustereo_imu.yaml  results-imucam-homewangruidata标定camera_imustereo_imu.txt
kalibr-cde/: cde-exec  cde.full-environment  cde.options  cde.uname  kalibr_aslam_config  kalibr_bagcreater  kalibr_bagextractor  kalibr_calibrate_cameras  kalibr_calibrate_imu_camera  kalibr_create_target_pdf
kalibr-cde/cde-root/etc/: matplotlibrc
kalibr-cde/cde-root/etc/alternatives/: libblas.so.3gf  liblapack.so.3gf  wx.pth
kalibr-cde/cde-root/etc/gnome/: defaults.list
kalibr-cde/cde-root/lib/x86_64-linux-gnu/: libcrypto.so.1.0.0  libdbus-1.so.3.7.2  libexpat.so.1.6.0  libgcc_s.so.1  libgcrypt.so.11.7.0  libglib-2.0.so.0.3400.1  libpcre.so.3.13.1  libssl.so.1.0.0  libuuid.so.1.3.0
kalibr-cde/cde-root/opt/ros/hydro/share/media_export/: package.xml
kalibr-cde/cde-root/opt/ros/hydro/share/urdfdom_headers/: package.xml
kalibr-cde/cde-root/usr/lib/: libBLT.2.4.so.8.5  libboost_filesystem.so.1.49.0  libboost_python-py27.so.1.49.0  libboost_regex.so.1.49.0  libboost_serialization.so.1.49.0  libboost_system.so.1.49.0  (+14 more)
(+786 files in other folders)
