<package>
  <name>media_export</name>
  <version>0.1.0</version>
  <description>
     Placeholder package enabling generic export of media paths.
  </description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <license>BSD</license>  

  <author>Dave Hershberger</author>
  <url>http://ros.org/wiki/media_export</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
